--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 500px;
+
 }
 
 .container h1 {
@@ -19,4 +20,11 @@
 .container .button {
   margin-top: 2rem;
   height: 40px;
+}
+
+
+@media (max-width:500px){
+  .container{
+    width: 90%;
+  }
 }
